Commiting Unlock Account, Login functionality ,forget password

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,10 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		
 			<dependency>
 			    <groupId>com.h2database</groupId>
@@ -84,6 +88,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			 <plugin>
+				   <groupId>org.sonarsource.scanner.maven</groupId>
+				   <artifactId>sonar-maven-plugin</artifactId>
+				   <version>3.4.0.905</version>
+				</plugin>
+				<plugin>
+				   <groupId>org.jacoco</groupId>
+				   <artifactId>jacoco-maven-plugin</artifactId>
+				   <version>0.8.1</version>
+				</plugin>
 		</plugins>
 	</build>
 
