--- a/pom.xml
+++ b/pom.xml
@@ -43,16 +43,17 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+<!-- ********* Below dependency is for sending mail from Spring Boot application -->		
 			<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-		
+<!-- **** Below dependency for embadded database********** -->		
 			<dependency>
 			    <groupId>com.h2database</groupId>
 			    <artifactId>h2</artifactId>
 			 </dependency>
-		
+<!-- ******* below dependencies are for work with jsp *************** -->		
 			<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -66,7 +67,7 @@
 		    <groupId>org.apache.tomcat.embed</groupId>
 		    <artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
-		
+<!-- ************************************************************** -->		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -88,6 +89,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
+<!-- *****Below Plugins are for Code review and Code Coverage***** -->			
 			 <plugin>
 				   <groupId>org.sonarsource.scanner.maven</groupId>
 				   <artifactId>sonar-maven-plugin</artifactId>
@@ -98,6 +100,7 @@
 				   <artifactId>jacoco-maven-plugin</artifactId>
 				   <version>0.8.1</version>
 				</plugin>
+<!-- *************************************************************** -->				
 		</plugins>
 	</build>
 
