--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,20 +2,22 @@ server:
   port: 9080
   servlet:
     context-path: /UserManagement
+# datasource configuration
 spring:
   datasource:
     driver-class-name: org.h2.Driver
     password: 
     url: jdbc:h2:mem:testdb
     username: sa
-
+#Hibernate Configuration
   jpa:
     properties:
       hibernate:
-        format_sql: true
-        show_sql: true
+#        format_sql: true
+#        show_sql: true
 
     defer-datasource-initialization: true
+#Mvc Configuration    
   mvc:
     view:
       prefix: /views/
@@ -35,4 +37,12 @@ spring:
             enable: true
           timeout: 5000
           writetimeout: 5000
-  
+
+#logging:
+#  level:
+#    root: INFO
+#  file:
+#    name: applogs.log
+#  pattern:
+#    console: null
+    
